--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = abhayram@hub4edi.com
 description = Package for Interfacing with AMPS from Agile Data Inc.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/mft-labs/amps-py
+url = https://mft-labs.github.io/amps-py
 project_urls =
     Bug Tracker = https://github.com/mft-labs/amps-py/issues
 classifiers =
