--- a/.github/workflows/commit_docs.yaml
+++ b/.github/workflows/commit_docs.yaml
@@ -20,5 +20,6 @@ jobs:
       - name: commit
         run: |
           # Stage the file, commit and push
+          git add .
           git commit -m "Create Docs from Latest Commit"
           git push origin main
