--- a/.github/workflows/commit_docs.yaml
+++ b/.github/workflows/commit_docs.yaml
@@ -1,13 +1,18 @@
 name: Create and commit docs to main
 on: push
 jobs:
-  date:
+  docs:
     runs-on: ubuntu-latest
     steps:
       # Checkout the branch
       - name: checkout
         uses: actions/checkout@v2
-
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.9' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          architecture: 'x64'
+          cache: 'pip'
+      - run: pip install pdoc3
       - name: save current date
         run: sh docs.sh
 
