--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -10,6 +10,12 @@ jobs:
       # Checkout the branch
       - name: checkout
         uses: actions/checkout@v2
+      - name: Clone docs branch
+        uses: actions/checkout@v2
+        with:
+          repository: mft-labs/amps-py
+          path: mft-labs/documentation
+          ref: documentation
       - uses: actions/setup-python@v3
         with:
           python-version: '3.9' # Version range or exact version of a Python version to use, using SemVer's version range syntax
@@ -23,17 +29,12 @@ jobs:
           # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-      - name: Clone supercharge docs repository
-        uses: actions/checkout@v2
-        with:
-          repository: mft-labs/amps-py
-          path: mft-labs/documentation
-          ref: documentation
+
 
       - name: commit
         run: |
           # Stage the file, commit and push
-          ls ./mft-labs/documentation
-          # git add .
-          # git commit -m "Create Docs from Latest Commit"
-          # git push origin documentation
+          cd ./mft-labs/documentation
+          git add .
+          git commit -m "Create Docs from Latest Commit"
+          git push origin documentation
