--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = amps-py
-version = 0.0.1
+version = 0.0.3
 author = Abhay Ram
 author_email = abhayram@hub4edi.com
 description = Package for Interfacing with AMPS from Agile Data Inc.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://mft-labs.github.io/amps-py
+url = https://mftlabs.github.io/amps-py
 project_urls =
-    Bug Tracker = https://github.com/mft-labs/amps-py/issues
+    Bug Tracker = https://github.com/mftlabs/amps-py/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
